syntax = "proto3";

option csharp_namespace = "GrpcVendorMachineService";

package vendormachine;

// The greeting service definition.
service Orderer {
  // Sends a greeting
  rpc PlaceOrder (OrderRequest) returns (PlaceOrderReply);
}

// The request message containing the user's order input
message OrderRequest {
  string message = 1;
}

// The response message containing place order status
message PlaceOrderReply {
  string message = 1;
}

